...
                Text("Yes")
              }
        },
        dismissButton = { TextButton(onClick = { alertDialogSent = false }) { Text("No") } })
  }
  Scaffold(
      modifier = Modifier.testTag("notificationScreen"),
      topBar = { TopBar(stringResource(R.string.notifications_screen_title)) },
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route ->
              if (route.route != Route.NOTIFICATIONS) {
                navigationActions.navigateTo(route)
              }
...
      verticalAlignment = Alignment.CenterVertically) {
        MeetingRequestButton(
            option = MeetingRequestOption.INBOX,
            isSelected = selectedOption == MeetingRequestOption.INBOX,
            onClick = { onOptionSelected(MeetingRequestOption.INBOX) },
            badgeCount = inboxSize,
            modifier = Modifier.weight(MEETING_REQUEST_BUTTON_SIZE).testTag("inboxButton"))

        MeetingRequestButton(
            option = MeetingRequestOption.SENT,
            isSelected = selectedOption == MeetingRequestOption.SENT,
            onClick = { onOptionSelected(MeetingRequestOption.SENT) },
            badgeCount = SENT_SIZE,
            modifier = Modifier.weight(MEETING_REQUEST_BUTTON_SIZE).testTag("sentButton"))
      }
}

@Composable
private fun MeetingRequestButton(
    option: MeetingRequestOption,
...
        }
      }
}

/** The enumeration of all the options available for meeting request displays */
enum class MeetingRequestOption(val displayName: String) {
  INBOX("Inbox"),
  SENT("Sent"),
}

/**
 * Function that shows the next saying on which inbox we are and the profile cards associate with it
 *
...
    selectedProfile: MutableState<Profile?>
) {
  LazyColumn(
      modifier =
          Modifier.padding()
              .padding(horizontal = HORIZONTAL_PADDING)
              .testTag("notificationScroll")) {
        item {
          Text(
              text = text,
              fontWeight = FontWeight.Bold,
              modifier =
                  Modifier.padding(vertical = TEXT_VERTICAL_PADDING)
                      .testTag("notificationFirstText"))
          Column(verticalArrangement = Arrangement.spacedBy(CARD_SPACING)) {
            profiles.forEach { p ->
              ProfileCard(
                  profile = p,
                  onclick = {
                    if (screenToNavigate != "") {
...
