...
    tabList: List<TopLevelDestination>,
    selectedItem: String,
    notificationCount: Int,
    heatMapCount: Int
) {
  NavigationBar(
      modifier = Modifier.fillMaxWidth().height(70.dp).testTag("bottomNavigationMenu"),
      containerColor = MaterialTheme.colorScheme.primary) {
        tabList.forEach { tab ->
          NavigationBarItem(
              icon = {
                Box {
                  Icon(
...
